# vle

./: Cargo.toml  README.md
src/: buffer.rs  editor.rs  endings.rs  files.rs  help.rs  key.rs  main.rs  prompt.rs  scrollbar.rs  test.txt  truncate.rs  tutorial.txt
src/syntax/: c.rs  cpp.rs  css.rs  csv.rs  cue.rs  fish.rs  flac.rs  go.rs  html.rs  ini.rs  java.rs  js.rs  json.rs  makefile.rs  markdown.rs  mod.rs  patch.rs  perl.rs  php.rs  python.rs  regex.rs  ron.rs  rust.rs  sh.rs  sql.rs  swift.rs  test.rs  tex.rs  toml.rs  ts.rs  tutorial.rs  xml.rs  yaml.rs  zig.rs
text/: ASCII.txt  fullwidth.txt  longline.txt  normalization.txt  quickbrown.txt  tabs.txt  trailing-whitespace.txt
