[package]
name = "vle"
description = "Very Little Editor - an exercise in minimalist text editing"
version = "0.29.1"
edition = "2024"
license = "MIT/Apache-2.0"
keywords = ["editor", "terminal", "text-editor"]
categories = ["development-tools", "text-editors"]
authors = ["Brian Langenberger <bjl@usa.net>"]
repository = "https://github.com/tuffy/vle"
# homepage = "TODO"

[[bin]]
name = "vle"
path = "src/main.rs"

[features]
ssh = ["dep:ssh2", "dep:inquire"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
imara-diff = "0.2"
logos = "0.16"
ratatui = "0.30"
ropey = "1.6"
unicode-width = "0.2"
ssh2 = { version = "0.9", optional = true }
inquire = { version = "0.9", optional = true }
regex-lite = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
