[package]
name = "vle"
description = "Very Little Editor - an exercise in minimalist text editing"
version = "1.5.1"
edition = "2024"
license = "MIT/Apache-2.0"
keywords = ["editor", "terminal", "text-editor"]
categories = ["development-tools", "text-editors"]
authors = ["Brian Langenberger <bjl@usa.net>"]
repository = "https://github.com/tuffy/vle"
homepage = "https://github.com/tuffy/vle"

[[bin]]
name = "vle"
path = "src/main.rs"

[features]
ssh = ["dep:ssh2", "dep:inquire"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
imara-diff = "0.2"
logos = "0.16"
ratatui = { version = "0.30", features = ["underline-color"] }
ropey = "1.6"
unicode-width = "0.2"
ssh2 = { version = "0.9", optional = true }
inquire = { version = "0.9", optional = true }
fancy-regex = "0.17"
