[package]
name = "vle"
description = "Very Little Editor - an exercise in minimalist text editing"
version = "1.18.0"
edition = "2024"
license = "MIT/Apache-2.0"
keywords = ["editor", "terminal", "text-editor"]
categories = ["development-tools", "text-editors"]
authors = ["Brian Langenberger <bjl@usa.net>"]
repository = "https://github.com/tuffy/vle"
homepage = "https://github.com/tuffy/vle"
rust-version = "1.95"

[[bin]]
name = "vle"
path = "src/main.rs"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

[features]
ssh = ["dep:ssh2", "dep:rpassword"]
# enables different colors of underlines
# compatible with many terminals, but not xterm
underline-color = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
imara-diff = "0.2"
logos = "0.16"
ratatui = { version = "0.30", features = ["underline-color"] }
ropey = "1.6"
unicode-width = "0.2"
ssh2 = { version = "0.9", optional = true }
rpassword = { version = "7.4", optional = true }
fancy-regex = "0.18"
radix_trie = "0.3"
unicode-normalization = "0.1"
